--- a/ziti/icon/iconfont.css
+++ b/ziti/icon/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "iconfont"; /* Project id  */
-  src: url('iconfont.ttf?t=1627487695918') format('truetype');
+  src: url('https://www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/icon/iconfont.ttf') format('truetype');
 }
 
 .iconfont {
