--- a/ziti/icon/chndao.css
+++ b/ziti/icon/chndao.css
@@ -1,4 +1,4 @@
-@font-face {font-family:"chndao";src:url('iconfont.ttf?t=1627487695918') format('truetype');}
+@font-face {font-family:"chndao";src:url('https://www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/icon/iconfont.ttf'') format('truetype');}
 .iconfont {font-family:"chndao"!important;font-size:24px!important;font-style:normal;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
 .icon-hantaoisms:before {content:"\e60b";}
 .icon-taijitubiao:before {content:"\e60d";}
