--- a/ziti/font.css
+++ b/ziti/font.css
@@ -5,110 +5,110 @@
 @font-face {
 	font-family: 'OPPOSans-M';
 	font-style: normal;
-	font-display:swap;
+	font-display:optional；
 	src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/font-opposans/OPPOSans-M.ttf') format('truetype');
 }
 @font-face {
 	font-family: 'OPPOSans-R';
 	font-style: normal;
-	font-display:swap;
+	font-display:optional;
 	src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/font-opposans/OPPOSans-R.ttf') format('truetype');
 }
 @font-face {
 	font-family: 'OPPOSans-B';
 	font-style: normal;
-	font-display:swap;
+	font-display:optional;
 	src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/font-opposans/OPPOSans-B.ttf') fformat('truetype');
 }
 @font-face {
 	font-family: 'OPPOSans-L';
 	font-style: normal;
-	font-display:swap;
+	font-display:optional;
 	src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/font-opposans/OPPOSans-L.ttf') format('truetype');
 }
 @font-face {
 	font-family: 'OPPOSans-H';
 	font-style: normal;
-	font-display:swap;
+	font-display:optional;
 	src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/font-opposans/OPPOSans-H.ttf') format('truetype');
 }
 /* 鸿蒙开原字体 */
 @font-face {
 	font-family: 'HarmonyOS_Sans_Black';
 	font-style: normal;
-	font-display:swap;
+	font-display:optional;
 	src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/HarmonyOS Sans/HarmonyOS_Sans/HarmonyOS_Sans_Black.ttf') format('truetype');
 }
 @font-face {
 	font-family: 'HarmonyOS_Sans_Bold';
 	font-style: normal;
-	font-display:swap;
+	font-display:optional;
 	src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/HarmonyOS Sans/HarmonyOS_Sans/HarmonyOS_Sans_Bold.ttf') format('truetype');
 }
 @font-face {
 	font-family: 'HarmonyOS_Sans_Light';
 	font-style: normal;
-	font-display:swap;
+	font-display:optional;
 	src:url('//fwww.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/HarmonyOS Sans/HarmonyOS_Sans/HarmonyOS_Sans_Light.ttf') format('truetype');
 }
 @font-face {
 	font-family: 'HarmonyOS_Sans_Medium';
 	font-style: normal;
-	font-display:swap;
+	font-display:optional;
 	src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/HarmonyOS Sans/HarmonyOS_Sans/HarmonyOS_Sans_Medium.ttf') format('truetype');
 }
 @font-face {
 	font-family: 'HarmonyOS_Sans_Regular';
 	font-style: normal;
-	font-display:swap;
+	font-display:optional;
 	src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/HarmonyOS Sans/HarmonyOS_Sans/HarmonyOS_Sans_Regular.ttf') format('truetype');
 }
 @font-face {
 	font-family: 'HarmonyOS_Sans_Thin';
 	font-style: normal;
-	font-display:swap;
+	font-display:optional;
 	src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/HarmonyOS Sans/HarmonyOS_Sans/HarmonyOS_Sans_Thin.ttf') format('truetype');
 }
 /* 粗宋 */
 @font-face {
     font-family:'cusong';
     font-style: normal;
-	font-display:swap;
+	font-display:optional;
     src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/ziti/cusong.ttf') format('truetype');
 }
 /* 方正粗金陵繁体 */
 @font-face {
     font-family:'FZCuJinLFW';
     font-style: normal;
-	font-display:swap;
+	font-display:optional;
     src:url('//fwww.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/ziti/FZCuJinLFW.TTF') format('truetype');
 }
 /* 田园字体 */    
 @font-face {
     font-family: 'webmo';
     font-style: normal;
-    font-display: swap;
+    font-display: optional;
     src: url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/ziti/webmo.ttf') format('truetype');
 }
 /* 九叠云篆 */
 @font-face {
     font-family:'jiudie';
     font-style: normal;
-    font-display: swap;
+    font-display: optional;
     src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/ziti/jiudie.ttf') format('truetype');
 }
 /* Ammonite */
 @font-face {
     font-family:'Ammonite';
     font-style: normal;
-    font-display: swap;
+    font-display: optional;
     src:url('//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/ziti/Ammonite.otf') format('opentype');
 }
 /* 娃娃字体 */
 @font-face {
 	font-family:'lizihan';
     font-style: normal;
-    font-display: swap;	
+    font-display: optional;	
 	src:url('//fwww.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/ziti/lizihan.otf') format('opentype');}
 /* 全局字体 */
 body, button, input, select, textarea {font-family: OPPOSans-R!important;}
