--- a/daohang/html/css/fixed.css
+++ b/daohang/html/css/fixed.css
@@ -5,7 +5,7 @@
 	top:0;
 	bottom:0;
 	z-index:999999;
-    font: 12px/1.5 -apple-system,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Microsoft YaHei,Source Han Sans SC,Noto Sans CJK SC,WenQuanYi Micro Hei,sans-serif;
+    font: 12px/1.5 OPPO-OS,sans-serif;
     font-weight: 300;
 }
 #fixed #dd {
