--- a/ziti/icon/iconfont.css
+++ b/ziti/icon/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "iconfont"; /* Project id  */
-  src: url('https://cdn.jsdelivr.net/gh/wulintang/cdn@1.0/ziti/icon/iconfont.woff2') format('woff2');
+  src: url('https://cdn.jsdelivr.net/gh/wulintang/cdn/ziti/icon/iconfont.woff2') format('woff2');
 }
 
 .iconfont {
